--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -5,6 +5,8 @@
 	-moz-transition-property: all;
   -moz-transition-timing-function: cubic-bezier(100,50,21,6);
 }
+
+
 .style-1 {
 	text-align: center;
   margin-bottom: 40px;
@@ -22,6 +24,5 @@
   border:none;
   background:rgba(0, 0, 0, 0.4);
   background:#fff;
-  padding:20px 20px; #000;
-  color:#1b1b1b;
+  padding:20px 20px;
 }
